tests/agl/rejections/type/for_range_by_negative.agl
for i in 1 to 5 by -1 do
  ()
done
